# gati

./: .gitignore  LANGGRAPH_INSTRUMENTATION.md  LANGGRAPH_QUICK_REFERENCE.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  README.md  SYSTEM_PROMPT_TRACKING.md  check_events.py  check_events_api.py  clean_db.py  demo_system_prompt.py  docker-compose.yml  init-db.sql.postgres-backup  pyproject.toml  setup.py  test_email_simple.js  test_flow.py  test_full_auth_flow.sh  test_langchain_instrumentation.py  test_local_request_code.js  test_resend_api.sh
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  backend.md  entrypoint.sh  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_run_name.py  003_add_parent_event_id.py
backend/app/: config.py  main.py
backend/app/api/: agents.py  events.py  health.py  metrics.py  runs.py
backend/app/models/: agent.py  (+4 more)
backend/migrations/: initial_schema.sql
dashboard/: .gitignore  Dockerfile  README.md  dashboard.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx
demo/: custom_python_trading_agent.py  langchain_research_agent.py  langgraph_workflow_agent.py  requirements.txt  test_gati_connection.py
docs/: DAY2_COMPLETE_REVIEW.md  DAY2_Summary.MD  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_INSTRUMENTATION.md  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md
examples/: langgraph_advanced_example.py  langgraph_example.py
examples/langchain_example/: main.py  requirements.txt
mcp-server/: Dockerfile  README.md  package.json  test-queries.ts
mcp-server/src/: index.ts
sdk/: README.md  pyproject.toml  requirements.txt  sdk.md  setup.py
sdk/gati/: __init__.py  docker-compose.yml  observe.py  py.typed  version.py
sdk/gati.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/gati/cli/: main.py
sdk/gati/core/: __init__.py  buffer.py  client.py  config.py  context.py  event.py  telemetry.py
sdk/gati/decorators/: __init__.py  track_agent.py  track_step.py  track_tool.py
sdk/gati/instrumentation/: detector.py  tools.py
sdk/gati/instrumentation/langchain/: INSTRUMENTATION.md  __init__.py  auto_inject.py  callback.py
sdk/gati/instrumentation/langgraph/: INSTRUMENTATION.md  __init__.py  auto_inject.py
sdk/gati/utils/: cost_calculator.py  serializer.py  token_counter.py
telemetry-backend/: README.md  index.html  schema.sql
telemetry-backend/api/: debug-env.js  metrics.js
tests/: __init__.py  requirements.txt  test_auth_and_metrics.py  test_auto_injection.py  test_auto_instrumentation.py  test_day1.py  test_e2e_system_prompt.py  test_integration_real_openai.py  test_langchain_instrumentation.py  test_langgraph_instrumentation.py  test_metrics_only.py  test_system_prompt_extraction.py
(+39 files in other folders)
